6799099: All automatic regression tests that create Robot fail on X11

Reviewed-by: art, ant